# yascms

./: install  pyproject.toml
ansible/: production.conf
yascms/: routes.py
yascms/alembic/versions/: 20240306_d1edfc84538f.py
yascms/helpers/: jinja.py
yascms/models/: account.py  api_token.py  auth_log.py  global_config.py  link.py  navbar.py  news.py  page.py  tag.py  telext.py  theme_config.py
yascms/tests/unit/helpers/: test_jinja.py
yascms/themes/yascms2020/backend/: link_list.jinja2  macros.jinja2  navbar_create.jinja2  navbar_edit.jinja2  navbar_list.jinja2  theme_config_list.jinja2
yascms/themes/yascms2020/backend/layouts/: navbar.jinja2
yascms/themes/yascms2020/frontend/: links.jinja2  macros.jinja2  news_get.jinja2  news_list.jinja2  page_get.jinja2  search.jinja2  search_results.jinja2  sitemap.jinja2  telext.jinja2
yascms/themes/yascms2020/frontend/layouts/: footer.jinja2  master.jinja2  navbar.jinja2
yascms/themes/yascms2020/layouts/: master.jinja2  skeleton.jinja2
yascms/themes/yascms2020/static/css/: common.css  frontend.css
yascms/views/: httpexceptions.py
yascms/views/backend/: group.py  link.py  navbar.py  news.py  oauth2_integration.py  page.py  telext.py
yascms/views/frontend/: news.py  page.py  search.py  sitemap.py
yascms/views/frontend/login/: oauth2.py
