[tool.poetry]
name = "yascms"
version = "0.0.1"
description = "又一個學校內容管理系統"
authors = ["William Wu <william@pylabs.org>"]
readme = "README.md"
packages = [{include = "yascms"}]

[tool.poetry.dependencies]
python = "^3.11"
invoke = "*"
pyramid = "*"
pyramid_mailer = "*"
pyramid_jinja2 = "*"
PyMySQL = "*"
alembic = "*"
pyramid_retry = "*"
pyramid_sqlalchemy = "*"
pyramid_tm = "*"
passlib = "*"
requests = "*"
pyramid_wtforms = "*"
wtforms = {extras = ["email"], version = "*"}
email_validator = "*"
pillow = "*"
Authlib = "*"
pyramid_exclog = "*"
pyramid-beaker = "*"
psycopg = "^3.2.12"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
flake8 = "*"
mixer = "*"
pyramid_debugtoolbar = "*"
pyramid_ipython = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
rope = "*"
tox = "*"
WebTest = "*"
waitress = "*"
mycli = "*"
Sphinx = "*"
pylint = "*"
pytest-datadir = "*"
Cython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."paste.app_factory"]
main = "yascms:main"

[tool.poetry.plugins."console_scripts"]
initialize_yascms_db = "yascms.scripts.initialize_db:main"
